# muggle

./: .travis.yml  README.md  pyproject.toml
muggle/: body.py  fork.py  headofrequest.py  headrq.py  http_exception.py  muggle.py  request.py  response.py
muggle/app/: app_basic.py
muggle/facets/auth/: identity.py  identity_simple.py  mg_auth.py  mg_secure.py  pass_.py  rq_auth.py
muggle/facets/auth/codecs/: codec.py  codec_plain.py
muggle/facets/fk/: fk_authenticated.py  fk_chain.py  fk_content_type.py  fk_encoding.py  fk_fixed.py  fk_host.py  fk_methods.py  fk_params.py  fk_regex.py  fk_types.py  mg_fork.py
muggle/fk/: fk_regex.py
muggle/http/: app.py  app_basic.py  app_timed.py
muggle/mg/: mg_fixed.py  mg_fork.py
muggle/primitives/: condition.py  scalar.py
muggle/rq/: rq_of.py  rq_with_headers.py  rq_without_header.py  rq_wrap.py
muggle/rs/: rs_empty.py  rs_fake.py  rs_text.py  rs_with_body.py  rs_with_header.py  rs_with_status.py  rs_with_type.py  rs_without_header.py  rs_wrap.py
test/: test_binary_body.py  test_mg_fork.py  test_rq_with_headers.py  test_rq_without_headers.py  test_rs_empty.py  test_rs_forked.py  test_rs_text.py  test_rs_with_body.py  test_rs_with_headers.py  test_rs_with_status.py  test_rs_with_type.py  test_rs_without_headers.py  test_text_body.py
