[tool.poetry]
name = "muggle"
version = "0.1.0"
description = "A true object-oriented web framework"
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
webob = "^1.8.6"
abc-delegation = "^0.3.1"
multidict = "^5.1.0"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.8"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
mypy = "^0.800"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
